--- a/src/main/resources/static/ngo_regi.html
+++ b/src/main/resources/static/ngo_regi.html
@@ -24,37 +24,28 @@
         <form>
             <div class="input-section">
                 <label><i class="fas fa-hospital"></i> NGO Name</label>
-                <input type="text" placeholder="Official Organization Name" required>
+                <input type="text" id="ngoname" placeholder="Official Organization Name" required>
             </div>
 
             <div class="input-section">
                 <label><i class="fas fa-map-marker-alt"></i> Address</label>
-                <input type="text" placeholder="Headquarters Street Address" required>
+                <input type="text" id="address" placeholder="Headquarters Street Address" required>
             </div>
 
             <div class="row">
                 <div class="input-section">
                     <label>City</label>
-                    <input type="text" placeholder="e.g. Gorakhpur" required>
+                    <input type="text" id="city" placeholder="e.g. Gorakhpur" required>
                 </div>
                 <div class="input-section">
                     <label>Pincode</label>
-                    <input type="text" maxlength="6" placeholder="123456" required>
+                    <input type="text" id="pincode" maxlength="6" placeholder="123456" required>
                 </div>
             </div>
 
             <div class="input-section">
                 <label><i class="fas fa-id-card"></i> License Number</label>
-                <input type="text" placeholder="Reg. No (e.g., 12-B / 80-G)" required>
-            </div>
-
-            <div class="file-upload-box">
-                <label for="file-input">
-                    <i class="fas fa-cloud-upload-alt"></i>
-                    <span>Upload Legal Documents (PDF/Docs)</span>
-                    <small>Maximum size: 5MB</small>
-                </label>
-                <input type="file" id="file-input" hidden required>
+                <input type="text" id="lisNo" placeholder="Reg. No (e.g., 12-B / 80-G)" required>
             </div>
 
             <button type="submit" class="submit-btn">
@@ -67,4 +58,5 @@
         </div>
     </div>
 </body>
+<script src="ngo_regi.js"></script>
 </html>
