adding css for selection page

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MedShetu</title>
+    <title>MedSetu</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="login-info">
-                <h2>MedShetu</h2>
+                <h2>MedSetu</h2>
                 <p>Connecting surplus medicine to those in need. Join our mission to save lives at the lowest cost.</p>
             </div>
 
@@ -38,7 +38,7 @@
                     <button type="submit" class="login-btn">Sign In</button>
                 </form>
 
-                <p class="register-link">Don't have an account? <a href="signup.html">Create one</a></p>
+                <p class="register-link">Don't have an account? <a href="type.html">Create one</a></p>
             </div>
         </div>
     </div>
