--- a/src/main/resources/static/ngo_regi.html
+++ b/src/main/resources/static/ngo_regi.html
@@ -63,7 +63,7 @@
         </form>
         
         <div class="footer-link">
-            Already registered? <a href="#">Login here</a>
+            Already registered? <a href="login.html">Login here</a>
         </div>
     </div>
 </body>
