--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join MedShetu | Sign Up</title>
+    <title>Join MedSetu | Sign Up</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="login-info">
-                <h2>Join MedShetu</h2>
+                <h2>Join MedSetu</h2>
                 <ul class="benefit-list">
                     <li>✓ Donate surplus medicine</li>
                     <li>✓ Help low-income families</li>
@@ -44,7 +44,6 @@
                             <option value="" disabled selected>Select your role</option>
                             <option value="donor">Donate Medicine (Donor)</option>
                             <option value="recipient">Receive Medicine (Recipient)</option>
-                            <option value="ngo">Register as NGO (Manage Donors & Recipients)</option>
                         </select>
                     </div>
                     
