complete frontend role architecture with Admin Dashboard

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -38,7 +38,7 @@
                     <button type="submit" class="login-btn">Sign In</button>
                 </form>
 
-                <p class="register-link">Don't have an account? <a href="type">Create one</a></p>
+                <p class="register-link">Don't have an account? <a href="type.html">Create one</a></p>
             </div>
         </div>
     </div>
