--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -88,7 +88,7 @@
             <!-- 🔥 Correct Spring Link -->
             <p class="register-link">
                 Already have an account?
-                <a href="/login">Sign In</a>
+                <a href="login.html">Sign In</a>
             </p>
         </div>
     </div>
