--- a/src/main/resources/static/type.html
+++ b/src/main/resources/static/type.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join MedSetu | Choose Account Type</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="type.css">
 </head>
@@ -17,7 +17,7 @@
         </div>
 
         <div class="card-container">
-            <div class="role-card" onclick="location.href='signup.html'">
+            <div class="role-card" data-role="USER">
                 <div class="icon-box user-bg">
                     <i class="fas fa-user"></i>
                 </div>
@@ -26,7 +26,7 @@
                 <span class="arrow-link">Get Started <i class="fas fa-chevron-right"></i></span>
             </div>
 
-            <div class="role-card" onclick="location.href='ngo_regi.html'">
+            <div class="role-card" data-role="NGO">
                 <div class="icon-box ngo-bg">
                     <i class="fas fa-hospital-alt"></i>
                 </div>
@@ -37,4 +37,5 @@
         </div>
     </div>
 </body>
+<script src="signup.js"></script>
 </html>
