--- a/src/main/resources/static/ngoDashboard.html
+++ b/src/main/resources/static/ngoDashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MedShetu | NGO Panel</title>
+    <title>MedSetu | NGO Panel</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="ngoDashboard.css">
@@ -13,7 +13,7 @@
         <nav class="sidebar">
             <div class="sidebar-brand">
                 <i class="fas fa-hospital-user"></i>
-                <span>MedShetu NGO</span>
+                <span>MedSetu NGO</span>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item active"><a href="#"><i class="fas fa-chart-pie"></i> Overview</a></li>
