Made working user_regi.js file for file inputand some changes in signup.js.

--- a/src/main/resources/static/userDashboard.html
+++ b/src/main/resources/static/userDashboard.html
@@ -98,8 +98,8 @@
         }
         if(!profileStat){
             setTimeout(() => {
-                window.location.href = "userDashboard.html";
-                }, 3000);
+                window.location.href = "user_regi.html";
+                }, 1000);
             }
     }
     // page load hote hi chale
