Changed text in user_regi.html

--- a/src/main/resources/static/user_regi.html
+++ b/src/main/resources/static/user_regi.html
@@ -211,7 +211,7 @@
 
         <div class="btn-container">
             <button type="submit" id="submitBtn">
-                <span class="btn-text">Complete Order</span>
+                <span class="btn-text">Complete Donation</span>
                 <div class="spinner"></div>
             </button>
         </div>
