Added js for newDonation to make the page working

--- a/src/main/resources/static/newDonation.html
+++ b/src/main/resources/static/newDonation.html
@@ -51,15 +51,6 @@
         </div>
     </div>
 
-    <script src="newDonation.js">
-        function updateFileName() {
-            const input = document.getElementById('fileInput');
-            const fileName = document.getElementById('fileName');
-            if (input.files.length > 0) {
-                fileName.textContent = input.files[0].name;
-                fileName.style.color = "#2ecc71";
-            }
-        }
-    </script>
+    <script src="newDonation.js"></script>
 </body>
 </html>
