--- a/src/main/resources/static/userDashboard.html
+++ b/src/main/resources/static/userDashboard.html
@@ -28,7 +28,7 @@
             <header class="dashboard-header">
                 <div class="welcome-msg">
                     <h1>Dashboard Overview</h1>
-                    <p>Welcome back, <strong>Adarsh Yadav</strong>! Here is your activity.</p>
+                    <p>Welcome back, <strong id="user_name">Adarsh Yadav</strong>! Here is your activity.</p>
                 </div>
                 <button class="add-donation-btn" id="donation">
                     <i class="fas fa-plus"></i> New Donation
@@ -59,24 +59,13 @@
                         <thead>
                             <tr>
                                 <th>Medicine Name</th>
-                                <th>Category</th>
+                                <th>Batch No.</th>
                                 <th>Expiry Date</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Paracetamol 500mg</td>
-                                <td>Fever</td>
-                                <td>Oct 2026</td>
-                                <td><span class="badge approved">Approved</span></td>
-                            </tr>
-                            <tr>
-                                <td>Cetirizine</td>
-                                <td>Allergy</td>
-                                <td>Jan 2027</td>
-                                <td><span class="badge pending">Pending</span></td>
-                            </tr>
+                        <tbody id="medicineTableBody">
+
                         </tbody>
                     </table>
                 </div>
@@ -84,31 +73,5 @@
         </main>
     </div>
 </body>
-<script>
-    async function getUserProf(){
-        let profileStat;
-        const Response = await fetch("/users/activeuser");
-        if (Response.ok){
-            let user = await Response.json();
-            console.log(user);
-            profileStat = user.profilecomplete;
-        }
-        else{
-        console.log("Something went wrong!");
-        }
-        if(!profileStat){
-            setTimeout(() => {
-                window.location.href = "user_regi.html";
-                }, 1000);
-            }
-    }
-    // page load hote hi chale
-    window.addEventListener("DOMContentLoaded", getUserProf);
-
-    let donationBtn = document.querySelector('#donation');
-
-    donationBtn.addEventListener('click', () => {
-    window.location.href = "newDonation.html";
-})
-</script>
+<script src="userDashboard.js"></script>
 </html>
