changing user dashboard buttons color

--- a/src/main/resources/static/userDashboard.html
+++ b/src/main/resources/static/userDashboard.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon green-bg"><i class="fas fa-check-circle"></i></div>
-                    <div class="stat-data"><h3>12</h3><p>Approved</p></div>
+                    <div class="stat-data"><h3>12</h3><p>Accepted</p></div>
                 </div>
             </section>
 
