Added feature for counting pending results in userDashboard

--- a/src/main/resources/static/userDashboard.html
+++ b/src/main/resources/static/userDashboard.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon red-bg"><i class="fas fa-clock"></i></div>
-                    <div class="stat-data"><h3>2</h3><p>Pending</p></div>
+                    <div class="stat-data"><h3 id="pending_count">2</h3><p>Pending</p></div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-icon green-bg"><i class="fas fa-check-circle"></i></div>
