Added offers in whole feature project

--- a/src/main/resources/static/newDonation.html
+++ b/src/main/resources/static/newDonation.html
@@ -29,8 +29,8 @@
                         <input type="date" id="med_exp" required>
                     </div>
                     <div class="input-group">
-                        <label>Batch No.</label>
-                        <input type="text" id="med_batch" placeholder="B-12345" required>
+                        <label>Quantity</label>
+                        <input type="text" id="med_quantity" placeholder="10" required>
                     </div>
                 </div>
 
